# ALPaCA

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  example1.ipynb  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: run_test.yml
alpaca/: __init__.py
alpaca/alpaca/: PSF.py  __init__.py  parameters.py
alpaca/utils/: epsilon.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: README.md  example1.ipynb  example2.ipynb
examples/colab_notebooks/: README.md  example1_colab.ipynb  example2_colab.ipynb
scripts/: example1.ipynb
tests/: __init__.py  test_PSF.py  test_alpaca.py  test_alpaca2.py  test_eps.py
