[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alpaca"
version = "0.1.0"
description = "Analytical PSF calculator for emitter near spherical nanoparticle"
readme = "README.md"
authors = [
  {name = "Teun Huijben", email = "teunhuijben@hotmail.com"}
]
maintainers = [
  {name = "Teun Huijben", email = "teunhuijben@hotmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/TeunHuijben/alpaca2/issues"
changelog = "https://github.com/TeunHuijben/alpaca2/blob/master/changelog.md"
homepage = "https://github.com/TeunHuijben/alpaca2"

[tool.setuptools]
package-dir = {"" = "alpaca"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

